--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,9 @@ install:
 
 script:
  - nix-build ci.nix -A buildOutputs
+ - nix eval -f default.nix 'lib'
+ - nix eval -f default.nix 'modules'
+ - nix eval -f default.nix 'overlays'
 
 after_success:
   - if [ -n "${CACHIX_CACHE}" ]; then nix-build ci.nix -A cacheOutputs | cachix push "${CACHIX_CACHE}"; fi
