--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
  - nix-build ci.nix -A buildOutputs
  - nix eval -f default.nix 'lib'
  - nix eval -f default.nix 'modules'
- - nix eval -f default.nix 'overlays'
+ - nix eval -f default.nix 'overrides'
 
 after_success:
   - if [ -n "${CACHIX_CACHE}" ]; then nix-build ci.nix -A cacheOutputs | cachix push "${CACHIX_CACHE}"; fi
