--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,7 @@ env:
   global:
     - CACHIX_CACHE=chagra
     - NUR_REPO=chagra
-
-matrix:
-  include:
-    - env: NIX_CHANNEL=https://nixos.org/channels/nixpkgs-unstable
-    - env: NIX_CHANNEL=https://nixos.org/channels/nixos-unstable
-    - env: NIX_CHANNEL=https://nixos.org/channels/nixos-19.09
+    - NIX_CHANNEL=https://nixos.org/channels/nixos-19.09
 
 install:
  - nix --version
